K8S/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-depl
  labels: 
    app: platform-service
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: platform-service
  template:
    metadata:
      labels:
        app: platform-service
    spec: 
      containers:
      - name: platform-service
        image: quangduoong/platform-service:latest
      imagePullSecrets:
      - name: regsecret
---
apiVersion: v1
kind: Service 
metadata:
  name: platform-clusterip-srv 
spec: 
  type: ClusterIP 
  selector:
    app: platform-service 
  ports: 
    - name: platform-service 
      protocol: TCP 
      port: 80 
      targetPort: 80
    - name: platform-grpc
      protocol: TCP
      port: 666 
      targetPort: 666
