K8S/platform-np-srv.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: platform-depl 
spec: 
  type: NodePort 
  selector: 
    app: platform-service
  ports: 
    - name: platform-service 
      protocol: TCP
      port: 80
      targetPort: 80
